15732
In 2.7.7, 2.8.0, 2.8.1.RC3, and trunk:
```scala
object A {
  def x {
    implicit lazy val e: Equiv[Int] = error("")
    implicitly[Equiv[Int]]
  }
}
```

gives:
```scala
A.scala:4: error: ambiguous implicit values:
 both lazy value e of type => Equiv[Int]
 and lazy value e$$lzy of type Equiv[Int]
 match expected type Equiv[Int]
    implicitly[Equiv[Int]]
              ^
one error found
```
